deployments/elk-stack/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
spec:
  rules:
    - host: kibana.tim.hsieh
      http:
        paths:
          - backend:
              serviceName: kibana-kb-http
              servicePort: 5601
