deployments/elk-stack/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-virtual-service
spec:
  hosts:
  - kibana.tim.hsieh
  gateways:
  - url-shorten-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kibana-kb-http.logs-monitoring.svc.cluster.local
        port:
          number: 5601
